Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- With Zope 2.7.1 and later selected attendees was lost when creating meetings.
  (#1483)
- Made the creator of an event automatically confirmed.
- Made notification on event creation automatic.
- The organizer doesn't need to approve his own meeting request.
- Confirmation of events now is done directly on all
  attendees calendars, and not via the organizing calendar.
- New events are not set to dirty.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-